--- a/static/lib/skeleton/skeleton.css
+++ b/static/lib/skeleton/skeleton.css
@@ -324,9 +324,8 @@ pre > code {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 th,
 td {
-  padding: 12px 15px;
-  text-align: left;
-  border-bottom: 1px solid #E1E1E1; }
+  padding: 6px 8px;
+  text-align: left; }
 th:first-child,
 td:first-child {
   padding-left: 0; }
