--- a/templates/fiboco.html
+++ b/templates/fiboco.html
@@ -48,7 +48,7 @@
         <input type="submit" value="Formular abschicken!"/>
     </form>
 
-    <h2>Augaben</h2>
+    <h2>Ausgaben</h2>
     <div class="row">
         <div class="eight columns">
             <table class="u-full-width">
@@ -66,7 +66,10 @@
                         {% for cid in cost_map %}
                             <tr>
                                 <td>{{ cid }}</td>
-                                <td>{{ value_map.get(cid).desc }}</td>
+                                <td>{{ cost_map.get(cid)[0] }}</td>
+                                <td>{{ cost_map.get(cid)[1] }}</td>
+                                <td>{{ cost_map.get(cid)[2] }}</td>
+                                <td>{{ cost_map.get(cid)[3] }}</td>
                             </tr>
                         {% endfor %}
                     {% endif %}
