--- a/templates/fiboco.html
+++ b/templates/fiboco.html
@@ -37,10 +37,10 @@
             </tr>
             <tr>
                 <td>
-                    <label for="date">Datum: </label>
+                    <label for="cdate">Datum: </label>
                 </td>
                 <td>
-                    <input type="text" name="date" id="date"  {% if date != None: %}value="{{ date }}"{% endif %}/>
+                    <input type="text" name="cdate" id="cdate"  {% if cdate != None: %}value="{{ cdate }}"{% endif %}/>
                 </td>
             </tr>
 
