--- a/templates/fiboco.html
+++ b/templates/fiboco.html
@@ -45,7 +45,8 @@
             </tr>
 
         </table>
-        <input type="submit" value="Formular abschicken!"/>
+        <input type="submit" value="{{ action }}" name="submit"/>
+        <input type="submit" value="Clear" name="submit"/>
     </form>
 
     <h2>Ausgaben</h2>
