delete list item

--- a/templates/fiboco.html
+++ b/templates/fiboco.html
@@ -46,6 +46,7 @@
 
         </table>
         <input type="submit" value="{{ action }}" name="submit"/>
+        <input type="submit" value="Delete" name="submit"/>
         <input type="submit" value="Clear" name="submit"/>
     </form>
 
