fix clear button

--- a/templates/fiboco.html
+++ b/templates/fiboco.html
@@ -16,7 +16,7 @@
         </table>
         <input type="submit" value="{{ action }}" name="submit"/>
         <input type="submit" value="Delete" name="submit"/>
-        <input type="submit" value="Clear" name="submit"/>
+        <input type="reset" value="Clear" name="reset"/>
     </form>
     <script>
         $(window).ready(function() {
