--- a/templates/fiboco.html
+++ b/templates/fiboco.html
@@ -15,8 +15,8 @@
             {{ render_field(form.date) }}
         </table>
         <input type="submit" value="{{ action }}" name="submit"/>
-        <input type="submit" value="Delete" name="submit"/>
-        <input type="reset" value="Clear" name="reset"/>
+        <input type="submit" value="Delete" name="submit" formnovalidate/>
+        <input type="submit" value="Clear" name="clear" formaction="/fiboco" formmethod="get" formnovalidate/>
     </form>
     <script>
         $(window).ready(function() {
